api-pcs/base/resources/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-pcs
  labels:
    app: api-pcs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-pcs
  template:
    metadata:
      labels:
        app: api-pcs
    spec:
      # initContainers:
      #   - name: init-myservice
      #     image: busybox
      #     command: ['sh', '-c', 'mkdir -p /mnt/data/']
      #     volumeMounts:
      #       - mountPath: "/mnt/data"
      #         name: my-volume
      containers:
      - name: api-pcs
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        image: docker.io/celenaaa/api-pcs:3.6.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: api-pcs-config
          mountPath: /usr/lib/pcs/api-pcs/config
          readOnly: true
        - name: api-pcs-public-storage
          mountPath: /usr/lib/pcs/api-pcs/public
        livenessProbe:
          httpGet:
            path: /liveness
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
      volumes:
      - name: api-pcs-config
        configMap:
          name: api-pcs-config
      - name: api-pcs-public-storage
        persistentVolumeClaim:
          claimName: pcs-public-pvc
