api-pcs/base/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-pcs
  labels:
    app: api-pcs
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '80'
spec:
  selector:
    app: api-pcs
  # type: NodePort
  # type: ExternalName
  # externalName: api.bleme.fr
  ports:
  - name: api-pcs
    port: 80
    targetPort: 80
    # nodePort: 30001
