api-pcs/base/resources/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.middlewares: pcs-https@kubernetescrd #, bleme-blemeheaders@kubernetescrd
    # traefik.ingress.kubernetes.io/preserve-host: "true"
    # traefik.ingress.kubernetes.io/pass-tls-cert: "true"
    # traefik.ingress.kubernetes.io/frontend-entry-points: "https"
    # traefik.ingress.kubernetes.io/redirect-entry-point: "https"
    # traefik.ingress.kubernetes.io/redirect-permanent: "true"
    # ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    # ingress.kubernetes.io/content-security-policy: "default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com"
  name: ingress-api-pcs
  labels:
    app: api-pcs
spec:
  tls:
  - secretName: pcs-tls-secret
    hosts:
    - "api.paris-pcs.fr"
    - "api.paris-pcs.com"
  rules:
  - host: "api.paris-pcs.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-pcs
            port:
              number: 80
  - host: "api.paris-pcs.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-pcs
            port:
              number: 80
